[gd_scene load_steps=15 format=3 uid="uid://60p30npm6kti"]

[ext_resource type="Script" uid="uid://cs741ecyhf2rf" path="res://scenes/ad_window/ad_window.gd" id="1_wfamw"]
[ext_resource type="Script" uid="uid://dgvf657jcu8kr" path="res://scenes/ad_window/ad_resource.gd" id="2_7wedu"]
[ext_resource type="Texture2D" uid="uid://iixwmp2ecpd7" path="res://scenes/ad_window/images/cat.jpg" id="2_y3o4a"]
[ext_resource type="Texture2D" uid="uid://8577dpvsyg5w" path="res://scenes/ad_window/images/TVP.png" id="4_t7k7s"]
[ext_resource type="Texture2D" uid="uid://bvywnidsapxcb" path="res://scenes/ad_window/images/arch.png" id="5_ssnec"]
[ext_resource type="Texture2D" uid="uid://nwggo0uk5uh7" path="res://scenes/ad_window/images/astra.png" id="6_corsv"]
[ext_resource type="Texture2D" uid="uid://c1mkrgn7tj3c3" path="res://scenes/ad_window/images/1000.jpg" id="7_2qchl"]
[ext_resource type="Texture2D" uid="uid://orybdq13cqo1" path="res://scenes/ad_window/images/join_the_revloution.png" id="8_xi67k"]

[sub_resource type="Resource" id="Resource_7wedu"]
script = ExtResource("2_7wedu")
url = "https://duckduckgo.com/"
img = ExtResource("2_y3o4a")
label_text = "Get free cat"
metadata/_custom_type_script = "uid://dgvf657jcu8kr"

[sub_resource type="Resource" id="Resource_t7k7s"]
script = ExtResource("2_7wedu")
url = "https://store.steampowered.com/app/2681270/The_Void_Project/"
img = ExtResource("4_t7k7s")
label_text = "Play cool games ?"
metadata/_custom_type_script = "uid://dgvf657jcu8kr"

[sub_resource type="Resource" id="Resource_ssnec"]
script = ExtResource("2_7wedu")
url = "https://wiki.archlinux.org/title/Installation_guide"
img = ExtResource("5_ssnec")
label_text = "TRY ARCH LINUX!!"
metadata/_custom_type_script = "uid://dgvf657jcu8kr"

[sub_resource type="Resource" id="Resource_corsv"]
script = ExtResource("2_7wedu")
url = "https://astralinux.ru/"
img = ExtResource("6_corsv")
label_text = "Tired of viruses?"
metadata/_custom_type_script = "uid://dgvf657jcu8kr"

[sub_resource type="Resource" id="Resource_xi67k"]
script = ExtResource("2_7wedu")
url = "https://www.bizrescuepro.com/the-dangers-of-clicking-on-unknown-links-and-attachments/"
img = ExtResource("7_2qchl")
label_text = "Wanna be rich?"
metadata/_custom_type_script = "uid://dgvf657jcu8kr"

[sub_resource type="Resource" id="Resource_2qchl"]
script = ExtResource("2_7wedu")
url = "https://en.wikipedia.org/wiki/Bolsheviks"
img = ExtResource("8_xi67k")
label_text = "Support the revolution"
metadata/_custom_type_script = "uid://dgvf657jcu8kr"

[node name="AdWindow" type="Window"]
title = "Only for u <3"
position = Vector2i(0, 36)
size = Vector2i(400, 300)
unresizable = true
script = ExtResource("1_wfamw")
ad_array = Array[ExtResource("2_7wedu")]([SubResource("Resource_7wedu"), SubResource("Resource_t7k7s"), SubResource("Resource_ssnec"), SubResource("Resource_corsv"), SubResource("Resource_xi67k"), SubResource("Resource_2qchl")])

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
alignment = 1

[node name="TextureRect" type="TextureButton" parent="CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 0

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="CenterContainer/TextureRect" to="." method="_on_texture_rect_pressed"]
